# aoc

./: .gitmodules  README.md
2024/: .gitignore  CMakeLists.txt  run  utils.c
2024/data/: test.txt
2024/runner/: main.c
2024/solutions/: 1.c  2  2.c  3.c  4.c  test.c
2024/solutions/2.dSYM/Contents/Resources/DWARF/: 2
2024/solutions/2.dSYM/Contents/Resources/Relocations/aarch64/: 2.yml
